--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas>
+		<script src="./utils.js"></script>
+		<script src="./road.js"></script>
 		<script src="./controls.js"></script>
 		<script src="./car.js"></script>
 		<script src="./main.js"></script>
